# matching-final-version

./: .env  Cargo.toml  Dark.md  architecture.md  config.json  events.md  features.md  market_maker_config.json  readme.md  roadmap.md  roxom.md  simplified_architecture.md  table_example.md
.cursor/rules/: always.mdc  code_style.mdc  golden_rules.mdc  matching_engine.mdc
benches/: engine_bench.rs  matching_engine_bench.rs  orderbook_bench.rs  orderbook_tps_bench.rs  rabbit_bench.rs
events/: events_20250404_154121_775.jsonl  events_20250404_154126_369.jsonl  events_20250404_172240_551.jsonl  events_20250404_185240_354.jsonl  events_20250404_185240_434.jsonl  events_20250404_185240_512.jsonl  events_20250404_185240_589.jsonl  events_20250404_185240_667.jsonl  events_20250404_185240_744.jsonl  events_20250404_185240_824.jsonl  events_20250404_185240_901.jsonl  events_20250404_185240_977.jsonl  events_20250404_185241_055.jsonl  events_20250404_185241_129.jsonl  events_20250404_185241_205.jsonl  events_20250404_185241_280.jsonl  events_20250404_185241_354.jsonl  events_20250404_185241_415.jsonl  events_20250404_185241_581.jsonl  events_20250404_185241_819.jsonl  events_20250404_185242_019.jsonl  events_20250404_185242_130.jsonl  events_20250404_185242_208.jsonl  events_20250404_185242_282.jsonl  events_20250404_185242_356.jsonl  events_20250404_185242_439.jsonl  events_20250404_185242_536.jsonl  events_20250404_185242_752.jsonl  events_20250404_185242_951.jsonl  events_20250404_185243_109.jsonl  events_20250404_185243_182.jsonl  events_20250404_185243_258.jsonl  events_20250404_185243_332.jsonl  events_20250404_185243_407.jsonl  events_20250404_185243_476.jsonl  events_20250404_185243_565.jsonl  events_20250404_185243_693.jsonl  events_20250404_185243_889.jsonl  events_20250404_185244_069.jsonl  events_20250404_185244_248.jsonl  (+1374 more)
examples/: orderbook_worker.rs
front/: package-lock.json  package.json
frontend/: market_maker_config.json  package-lock.json  package.json
frontend/events/: events_20250410_144421_531.jsonl  events_20250410_144555_485.jsonl  events_20250410_144555_921.jsonl  events_20250410_144556_256.jsonl  events_20250410_144556_360.jsonl  events_20250410_144557_200.jsonl  events_20250410_144557_298.jsonl  events_20250410_144558_180.jsonl  events_20250410_144558_339.jsonl  events_20250410_144710_890.jsonl
rabbitmq/: Cargo.toml
rabbitmq/src/: lib.rs
rabbitmq/tests/: rabbitmq.rs
src/: config.rs  depth.rs  events copy.rs  lib.rs  main.rs  matching_engine.rs  orderbook.rs  types.rs
src/api/: dto.rs  (+4 more)
tests/: api_tests.rs
(+89 files in other folders)
