[package]
name = "ultimate-matching"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "orderbook_bench"
harness = false
