[package]
name = "ultimate-matching"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde"] }
rust_decimal_macros = "1.34"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
parking_lot = "0.12"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
num-traits = "0.2"
# Added for API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
structopt = "0.3"
# Added for market maker
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.10"
# Added for API tests
axum-test = "13.1"
reqwest = { version = "0.11", features = ["json"] }
hyper = "1.1"
tower = "0.4"
mockall = "0.11"
ctor = "0.2"
serde_json = "1.0"

[[bench]]
name = "matching_engine_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false

[[bin]]
name = "market_maker"
path = "src/bin/market_maker.rs"
