[package]
name = "rabbitmq"
version = "0.1.0"
edition = "2024"

[dependencies]
amqprs = { version = "2.1.1", features = ["urispec", "traces"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"